Update from https://github.com/sahithyandev/static-blog/commit/6a6eb4a421dd837f0d1cddbbba96e62d9032e870

--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
     <meta property="og:site_name" content="Sahithyan" />
     <meta
       property="og:image"
-      content="https://sahithyandev.github.io/og-image-base.png"
+      content="https://sahithyandev.github.io/og-images/base.png"
     />
     <meta property="og:image:alt" content="Sahithyan" />
 
