--- a/tools/dp-maker.html
+++ b/tools/dp-maker.html
@@ -33,7 +33,7 @@
     <meta property="og:site_name" content="Sahithyan" />
     <meta
       property="og:image"
-      content="https://sahithyandev.github.io/og-dp-maker.png"
+      content="https://sahithyandev.github.io/og-images/dp-maker.png"
     />
     <meta property="og:image:alt" content="The 'DP Maker' tool" />
 
