--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <meta property="og:site_name" content="Sahithyan" />
     <meta
       property="og:image"
-      content="https://sahithyandev.github.io/og-image-base.png"
+      content="https://sahithyandev.github.io/og-images/base.png"
     />
     <meta property="og:image:alt" content="Sahithyan" />
 
