Update from https://github.com/sahithyandev/static-blog/commit/144a2b602041cc77f6faae2f87b9b61860e0ff06

--- a/tools/dp-maker.html
+++ b/tools/dp-maker.html
@@ -226,9 +226,6 @@
       .controls .colors-input-container .color-input--selector:hover {
         border-color: var(--secondary);
       }
-      .controls .colors-input-container .auto-button {
-        margin-left: auto;
-      }
       @media (max-width: 640px) {
         .controls .colors-input-container {
           --size: 58px;
@@ -435,6 +432,25 @@
                     style="background: rgb(180, 40, 77)"
                   ></div
                 ></label>
+                <div style="margin-left: auto">
+                  <button title="Pick random colors">
+                    <svg
+                      class="icon icon-tabler icon-tabler-refresh"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
+                      <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
+                    </svg>
+                  </button>
+                </div>
               </div>
             </li>
             <li>
