Update from https://github.com/sahithyandev/static-blog/commit/298a2c734634cbf8fda90696bb829065cf727fa9

--- a/tidbits.html
+++ b/tidbits.html
@@ -166,7 +166,7 @@
               <h2 class="tidbit--title">DP Maker</h2>
               <img
                 class="tidbit--img"
-                src="/og-dp-maker.png"
+                src="/og-images/dp-maker.png"
                 alt="DP Maker project"
                 style="aspect-ratio: 1200 / 630"
               />
