Update from https://github.com/sahithyandev/static-blog/commit/fdb58688e8f3d0d1fde0943849a81466a3a3747c

--- a/posts.html
+++ b/posts.html
@@ -73,16 +73,6 @@
       }
     </script>
 
-    <script type="importmap">
-      {
-        "imports": {
-          "preact": "/lib-preact.mjs",
-          "preact/hooks": "/lib-preact.mjs",
-          "preact/compat": "/lib-preact.mjs",
-          "@preact/signals": "/lib-preact.mjs"
-        }
-      }
-    </script>
     <style>
       .tags-container {
         display: flex;
@@ -281,6 +271,6 @@
     </div>
     <footer>© Sahithyan 2022</footer>
 
-    <script id="main-script" defer="" src="/App.js" type="module"></script>
+    <script id="main-script" defer="" src="/js/App.js" type="module"></script>
   </body>
 </html>
