--- a/tools/dp-maker.html
+++ b/tools/dp-maker.html
@@ -73,16 +73,6 @@
       }
     </script>
 
-    <script type="importmap">
-      {
-        "imports": {
-          "preact": "/lib-preact.mjs",
-          "preact/hooks": "/lib-preact.mjs",
-          "preact/compat": "/lib-preact.mjs",
-          "@preact/signals": "/lib-preact.mjs"
-        }
-      }
-    </script>
     <style>
       .dp {
         --me-image-size: 0.9;
@@ -483,6 +473,6 @@
     </div>
     <footer>© Sahithyan 2022</footer>
 
-    <script id="main-script" defer="" src="/App.js" type="module"></script>
+    <script id="main-script" defer="" src="/js/App.js" type="module"></script>
   </body>
 </html>
