Update from https://github.com/sahithyandev/static-blog/commit/1f7563081a0f1432902cef580738aae024b2aa25

--- a/tools/dp-maker.html
+++ b/tools/dp-maker.html
@@ -395,6 +395,7 @@
                     id="squircle"
                     class="sr-only"
                     value="squircle"
+                    checked=""
                   /><span class="shape-input--selector">squircle</span></label
                 ><label for="circle" class="shape-input"
                   ><input
@@ -452,10 +453,16 @@
                   type="range"
                   id="gradient-size"
                   min="0"
-                  max="16" /></span
+                  max="16"
+                  value="10" /></span
               ><span class="input-group"
                 ><label>Gradient angle</label
-                ><input type="range" id="gradient-angle" min="0" max="360"
+                ><input
+                  type="range"
+                  id="gradient-angle"
+                  min="0"
+                  max="360"
+                  value="0"
               /></span>
             </li>
             <li style="text-align: right; margin-top: 32px">
