Update from https://github.com/sahithyandev/static-blog/commit/03d780db77a69bd2e023098dd07403c38a0f841e

--- a/index.html
+++ b/index.html
@@ -429,6 +429,26 @@
         <section>
           <h2 class="sub-heading">Recent Posts</h2>
           <div class="posts-container">
+            <div class="post-card show" data-slug="preact-prerendering-issue">
+              <span class="post-released-date">21 December 2022</span
+              ><a
+                href="/post/preact-prerendering-issue"
+                data-is-internal=""
+                class=" "
+                ><h3 class="title">
+                  Solving the Prerendering Preact Problem
+                </h3></a
+              >
+              <p class="description">
+                Having trouble while prerendering a Preact site? In this post,
+                I'll share my experience finding a solution to this common
+                problem.
+              </p>
+              <div class="tags-container">
+                <span class="tag">preact</span
+                ><span class="tag">experience</span>
+              </div>
+            </div>
             <div class="post-card show" data-slug="open-graph-images">
               <span class="post-released-date">20 November 2022</span
               ><a href="/post/open-graph-images" data-is-internal="" class=" "
@@ -463,19 +483,6 @@
               </p>
               <div class="tags-container">
                 <span class="tag">explanation</span>
-              </div>
-            </div>
-            <div class="post-card show" data-slug="building-xcalc">
-              <span class="post-released-date">10 June 2021</span
-              ><a href="/post/building-xcalc" data-is-internal="" class=" "
-                ><h3 class="title">Story of Building XCalc</h3></a
-              >
-              <p class="description">
-                Sharing how I built XCalc, an extended calculator.
-              </p>
-              <div class="tags-container">
-                <span class="tag">experience</span
-                ><span class="tag">project</span>
               </div>
             </div>
           </div>
