--- a/posts.html
+++ b/posts.html
@@ -188,6 +188,23 @@
           /><noscript>Search can't work without JavaScript.</noscript>
         </div>
         <div class="posts-container">
+          <div class="post-card show" data-slug="preact-prerendering-issue">
+            <span class="post-released-date">21 December 2022</span
+            ><a
+              href="/post/preact-prerendering-issue"
+              data-is-internal=""
+              class=" "
+              ><h3 class="title">Solving the Prerendering Preact Problem</h3></a
+            >
+            <p class="description">
+              Having trouble while prerendering a Preact site? In this post,
+              I'll share my experience finding a solution to this common
+              problem.
+            </p>
+            <div class="tags-container">
+              <span class="tag">preact</span><span class="tag">experience</span>
+            </div>
+          </div>
           <div class="post-card show" data-slug="open-graph-images">
             <span class="post-released-date">20 November 2022</span
             ><a href="/post/open-graph-images" data-is-internal="" class=" "
