Update from https://github.com/sahithyandev/static-blog/commit/1dfa3287c81f204028b2d4ed208824ab9a746748

--- a/index.html
+++ b/index.html
@@ -429,6 +429,19 @@
         <section>
           <h2 class="sub-heading">Recent Posts</h2>
           <div class="posts-container">
+            <div class="post-card show" data-slug="xcalc-for-android">
+              <span class="post-released-date">22 January 2023</span
+              ><a href="/post/xcalc-for-android" data-is-internal="" class=" "
+                ><h3 class="title">XCalc for Android</h3></a
+              >
+              <p class="description">
+                Sharing how &amp; why I developed XCalc as a native Android app
+              </p>
+              <div class="tags-container">
+                <span class="tag">experience</span
+                ><span class="tag">project</span>
+              </div>
+            </div>
             <div class="post-card show" data-slug="preact-prerendering-issue">
               <span class="post-released-date">21 December 2022</span
               ><a
@@ -472,18 +485,6 @@
               >
               <p class="description"></p>
               <div class="tags-container"><span class="tag">meme</span></div>
-            </div>
-            <div class="post-card show" data-slug="a-javascript-quiz">
-              <span class="post-released-date">17 September 2021</span
-              ><a href="/post/a-javascript-quiz" data-is-internal="" class=" "
-                ><h3 class="title">A JavaScript Quiz — Explained</h3></a
-              >
-              <p class="description">
-                Explanation of an amazing quiz I took an year ago.
-              </p>
-              <div class="tags-container">
-                <span class="tag">explanation</span>
-              </div>
             </div>
           </div>
         </section>
