--- a/posts.html
+++ b/posts.html
@@ -154,7 +154,7 @@
   <body>
     <div id="nav-bar">
       <nav>
-        <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
+        <a href="/" class="nav--logo" data-is-internal="">SAHTIHYAN</a
         ><input type="checkbox" id="menu-toggle" /><label
           for="menu-toggle"
           class="hamburger-icon"
@@ -188,6 +188,19 @@
           /><noscript>Search can't work without JavaScript.</noscript>
         </div>
         <div class="posts-container">
+          <div class="post-card show" data-slug="xcalc-for-android">
+            <span class="post-released-date">22 January 2023</span
+            ><a href="/post/xcalc-for-android" data-is-internal="" class=" "
+              ><h3 class="title">XCalc for Android</h3></a
+            >
+            <p class="description">
+              Sharing how &amp; why I developed XCalc as a native Android app
+            </p>
+            <div class="tags-container">
+              <span class="tag">experience</span
+              ><span class="tag">project</span>
+            </div>
+          </div>
           <div class="post-card show" data-slug="preact-prerendering-issue">
             <span class="post-released-date">21 December 2022</span
             ><a
