Update from https://github.com/sahithyandev/static-blog/commit/6750cf2291eae66aca0a9776caafc91dfb0b6205

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
     />
     <meta property="og:title" content="Home | Sahithyan" />
-    <meta property="og:url" content="sahithyandev.github.io" />
+    <meta property="og:url" content="sahithyandev.github.io/" />
     <meta property="og:site_name" content="Sahithyan" />
     <meta
       property="og:image"
