--- a/tools/dp-maker.html
+++ b/tools/dp-maker.html
@@ -29,7 +29,7 @@
       content="With this small 'DP Maker' tool, you can create gradient-bordered display pictures (just like mine!). Made by me, Sahithyan."
     />
     <meta property="og:title" content="Create Your Own DP | Sahithyan" />
-    <meta property="og:url" content="sahithyandev.github.io" />
+    <meta property="og:url" content="sahithyandev.github.io/tools/dp-maker" />
     <meta property="og:site_name" content="Sahithyan" />
     <meta
       property="og:image"
