--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
       content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
     />
     <meta property="og:title" content="NoT F0uND | Sahithyan" />
-    <meta property="og:url" content="sahithyandev.github.io" />
+    <meta property="og:url" content="sahithyandev.github.io/404" />
     <meta property="og:site_name" content="Sahithyan" />
     <meta
       property="og:image"
