Update from https://github.com/sahithyandev/static-blog/commit/3def7ad5f01776040fb491bb3153288022e76d8d

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       content="https://sahithyandev.github.io/og-images/base.png"
     />
     <meta property="og:image:alt" content="Sahithyan" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
@@ -70,6 +72,31 @@
           .catch((error) => {
             console.error("Error while initializing service worker", error);
           });
+      }
+      window.__supportCssHas = true;
+      try {
+        document.querySelector("*:has(input:checked)");
+      } catch (e) {
+        if (e instanceof DOMException) {
+          window.__supportCssHas = false;
+        }
+      }
+
+      // select pre-selected theme
+      const theme = window.localStorage.getItem("theme");
+      if (theme) {
+        function setTheme() {
+          const themeElement = document.querySelector(`input#theme-${theme}`);
+          if (!themeElement) {
+            requestAnimationFrame(setTheme);
+          } else {
+            themeElement.checked = true;
+            if (!window.__supportCssHas) {
+              document.documentElement.setAttribute("data-theme", theme);
+            }
+          }
+        }
+        requestAnimationFrame(setTheme);
       }
     </script>
 
@@ -246,6 +273,36 @@
           <li>
             <a href="/about" class="nav--link" data-is-internal="">About</a>
           </li>
+          <li class="theme-switch-labels">
+            <div class="one-push-switch">
+              <input
+                class="sr-only"
+                type="radio"
+                name="theme-switch"
+                id="theme-auto"
+                value="auto"
+                checked=""
+              /><label for="theme-light" title="Change to light theme"
+                >auto</label
+              ><input
+                class="sr-only"
+                type="radio"
+                name="theme-switch"
+                id="theme-light"
+                value="light"
+              /><label for="theme-dark" title="Change to dark theme"
+                >light</label
+              ><input
+                class="sr-only"
+                type="radio"
+                name="theme-switch"
+                id="theme-dark"
+                value="dark"
+              /><label for="theme-auto" title="Use user-preferenced theme"
+                >dark</label
+              >
+            </div>
+          </li>
         </ul>
       </nav>
     </div>
@@ -344,7 +401,7 @@
               href="https://www.twitter.com/sahithyandev"
               target="_blank"
               rel="noopener noreferrer"
-              class=" "
+              class=""
               ><svg
                 class="icon icon-tabler icon-tabler-brand-twitter"
                 width="24"
@@ -365,7 +422,7 @@
               href="https://www.instagram.com/sahithyan_"
               target="_blank"
               rel="noopener noreferrer"
-              class=" "
+              class=""
               ><svg
                 class="icon icon-tabler icon-tabler-brand-instagram"
                 width="24"
@@ -386,7 +443,7 @@
               href="https://www.github.com/sahithyandev"
               target="_blank"
               rel="noopener noreferrer"
-              class=" "
+              class=""
               ><svg
                 class="icon icon-tabler icon-tabler-brand-github"
                 width="24"
@@ -407,7 +464,7 @@
               href="https://sahithyandev.github.io/feed.xml"
               target="_blank"
               rel="noopener noreferrer"
-              class=" "
+              class=""
               ><svg
                 class="icon icon-tabler icon-tabler-rss"
                 width="24"
@@ -431,7 +488,7 @@
           <div class="posts-container">
             <div class="post-card show" data-slug="xcalc-for-android">
               <span class="post-released-date">22 January 2023</span
-              ><a href="/post/xcalc-for-android" data-is-internal="" class=" "
+              ><a href="/post/xcalc-for-android" data-is-internal="" class=""
                 ><h3 class="title">XCalc for Android</h3></a
               >
               <p class="description">
@@ -447,7 +504,7 @@
               ><a
                 href="/post/preact-prerendering-issue"
                 data-is-internal=""
-                class=" "
+                class=""
                 ><h3 class="title">
                   Solving the Prerendering Preact Problem
                 </h3></a
@@ -464,7 +521,7 @@
             </div>
             <div class="post-card show" data-slug="open-graph-images">
               <span class="post-released-date">20 November 2022</span
-              ><a href="/post/open-graph-images" data-is-internal="" class=" "
+              ><a href="/post/open-graph-images" data-is-internal="" class=""
                 ><h3 class="title">Static Open Graph images</h3></a
               >
               <p class="description">
@@ -480,7 +537,7 @@
               ><a
                 href="/post/the-is-odd-npm-package-meme"
                 data-is-internal=""
-                class=" "
+                class=""
                 ><h3 class="title">The is-odd NPM package</h3></a
               >
               <p class="description"></p>
