--- a/tidbits.html
+++ b/tidbits.html
@@ -36,6 +36,8 @@
       content="https://sahithyandev.github.io/og-images/base.png"
     />
     <meta property="og:image:alt" content="Sahithyan" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
@@ -70,6 +72,31 @@
           .catch((error) => {
             console.error("Error while initializing service worker", error);
           });
+      }
+      window.__supportCssHas = true;
+      try {
+        document.querySelector("*:has(input:checked)");
+      } catch (e) {
+        if (e instanceof DOMException) {
+          window.__supportCssHas = false;
+        }
+      }
+
+      // select pre-selected theme
+      const theme = window.localStorage.getItem("theme");
+      if (theme) {
+        function setTheme() {
+          const themeElement = document.querySelector(`input#theme-${theme}`);
+          if (!themeElement) {
+            requestAnimationFrame(setTheme);
+          } else {
+            themeElement.checked = true;
+            if (!window.__supportCssHas) {
+              document.documentElement.setAttribute("data-theme", theme);
+            }
+          }
+        }
+        requestAnimationFrame(setTheme);
       }
     </script>
 
@@ -140,6 +167,36 @@
           </li>
           <li>
             <a href="/about" class="nav--link" data-is-internal="">About</a>
+          </li>
+          <li class="theme-switch-labels">
+            <div class="one-push-switch">
+              <input
+                class="sr-only"
+                type="radio"
+                name="theme-switch"
+                id="theme-auto"
+                value="auto"
+                checked=""
+              /><label for="theme-light" title="Change to light theme"
+                >auto</label
+              ><input
+                class="sr-only"
+                type="radio"
+                name="theme-switch"
+                id="theme-light"
+                value="light"
+              /><label for="theme-dark" title="Change to dark theme"
+                >light</label
+              ><input
+                class="sr-only"
+                type="radio"
+                name="theme-switch"
+                id="theme-dark"
+                value="dark"
+              /><label for="theme-auto" title="Use user-preferenced theme"
+                >dark</label
+              >
+            </div>
           </li>
         </ul>
       </nav>
