--- a/tidbits.html
+++ b/tidbits.html
@@ -1,233 +1,284 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Tidbits | Sahithyan</title>
-    <meta
-      name="description"
-      content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
-    />
+	<head>
+		<title>Tidbits | Sahithyan</title>
+		<meta
+			name="description"
+			content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
+		/>
 
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link
-      rel="alternate"
-      href="https://sahithyandev.github.io/feed.xml"
-      type="application/rss+xml"
-      title="RSS feed"
-    />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link
+			rel="alternate"
+			href="https://sahithyandev.github.io/feed.xml"
+			type="application/rss+xml"
+			title="RSS feed"
+		/>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@sahithyandev" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@sahithyandev" />
 
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
-    />
-    <meta property="og:title" content="Tidbits | Sahithyan" />
-    <meta property="og:url" content="sahithyandev.github.io/tidbits" />
-    <meta property="og:site_name" content="Sahithyan" />
-    <meta
-      property="og:image"
-      content="https://sahithyandev.github.io/og-images/base.png"
-    />
-    <meta property="og:image:alt" content="Sahithyan" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:description"
+			content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
+		/>
+		<meta property="og:title" content="Tidbits | Sahithyan" />
+		<meta property="og:url" content="sahithyandev.github.io/tidbits" />
+		<meta property="og:site_name" content="Sahithyan" />
+		<meta
+			property="og:image"
+			content="https://sahithyandev.github.io/og-images/base.png"
+		/>
+		<meta property="og:image:alt" content="Sahithyan" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
 
-    <link
-      rel="preload"
-      as="style"
-      onload="this.onload=null; this.rel='stylesheet'"
-      class="google-fonts-link"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap"
-    />
+		<link
+			rel="preload"
+			as="style"
+			onload="this.onload=null; this.rel='stylesheet'"
+			class="google-fonts-link"
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap"
+		/>
 
-    <noscript>
-      <link class="google-fonts-link" rel="stylesheet" type="text/css" />
-    </noscript>
+		<noscript>
+			<link class="google-fonts-link" rel="stylesheet" type="text/css" />
+		</noscript>
 
-    <script
-      data-host="https://microanalytics.io"
-      data-dnt="false"
-      src="https://microanalytics.io/js/script.js"
-      id="ZwSg9rf6GA"
-      async=""
-      defer=""
-    ></script>
+		<script
+			data-host="https://microanalytics.io"
+			data-dnt="false"
+			src="https://microanalytics.io/js/script.js"
+			id="ZwSg9rf6GA"
+			async=""
+			defer=""
+		></script>
 
-    <link rel="stylesheet" href="/global.css" />
+		<link rel="stylesheet" href="/global.css" />
 
-    <script>
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker
-          .register("/service-worker.js")
-          .catch((error) => {
-            console.error("Error while initializing service worker", error);
-          });
-      }
-      window.__supportCssHas = true;
-      try {
-        document.querySelector("*:has(input:checked)");
-      } catch (e) {
-        if (e instanceof DOMException) {
-          window.__supportCssHas = false;
-        }
-      }
+		<script>
+			if ("serviceWorker" in navigator) {
+				navigator.serviceWorker
+					.register("/service-worker.js")
+					.catch((error) => {
+						console.error("Error while initializing service worker", error);
+					});
+			}
+			window.__supportCssHas = true;
+			try {
+				document.querySelector("*:has(input:checked)");
+			} catch (e) {
+				if (e instanceof DOMException) {
+					window.__supportCssHas = false;
+				}
+			}
 
-      // select pre-selected theme
-      const theme = window.localStorage.getItem("theme");
-      if (theme) {
-        function setTheme() {
-          const themeElement = document.querySelector(`input#theme-${theme}`);
-          if (!themeElement) {
-            requestAnimationFrame(setTheme);
-          } else {
-            themeElement.checked = true;
-            if (!window.__supportCssHas) {
-              document.documentElement.setAttribute("data-theme", theme);
-            }
-          }
-        }
-        requestAnimationFrame(setTheme);
-      }
-    </script>
+			// select pre-selected theme
+			const theme = window.localStorage.getItem("theme");
+			if (theme) {
+				function setTheme() {
+					const themeElement = document.querySelector(`input#theme-${theme}`);
+					if (!themeElement) {
+						requestAnimationFrame(setTheme);
+					} else {
+						themeElement.checked = true;
+						if (!window.__supportCssHas) {
+							document.documentElement.setAttribute("data-theme", theme);
+						}
+					}
+				}
+				requestAnimationFrame(setTheme);
+			}
+		</script>
 
-    <style>
-      .tidbits-container {
-        margin-top: 50px;
-      }
-      @media (max-width: 640px) {
-        .tidbits-container {
-          margin-top: 40px;
-        }
-      }
+		<style>
+			.tidbits-container {
+				margin-top: 50px;
+				display: flex;
+				flex-direction: column;
+				gap: 30px;
+			}
+			@media (max-width: 640px) {
+				.tidbits-container {
+					margin-top: 40px;
+					gap: 25px;
+				}
+			}
 
-      .tidbit-container {
-        display: grid;
-        grid-template-columns: 280px auto;
-        grid-template-rows: auto 1fr;
-        grid-template-areas: "img title" "img description";
-        column-gap: 20px;
-      }
-      @media (max-width: 640px) {
-        .tidbit-container {
-          grid-template-columns: auto;
-          grid-template-rows: repeat(3, auto);
-          grid-template-areas: "img" "title" "description";
-        }
-      }
+			.tidbit-container {
+				display: grid;
+				grid-template-columns: 280px auto;
+				grid-template-rows: auto 1fr;
+				grid-template-areas: "img title" "img description";
+				column-gap: 20px;
+			}
+			@media (max-width: 640px) {
+				.tidbit-container {
+					grid-template-columns: auto;
+					grid-template-rows: repeat(3, auto);
+					grid-template-areas: "img" "title" "description";
+				}
+			}
 
-      .tidbit--title {
-        grid-area: title;
-        margin-top: 0;
-      }
+			.tidbit--title {
+				grid-area: title;
+				margin-top: 0;
+			}
 
-      .tidbit--img {
-        grid-area: img;
-        height: fit-content;
-        width: 100%;
-        margin-bottom: 20px;
-        border-radius: 4px;
-      }
+			.tidbit--img {
+				grid-area: img;
+				height: fit-content;
+				width: 100%;
+				margin-bottom: 20px;
+				border-radius: 4px;
+			}
 
-      .tidbit--description {
-        grid-area: description;
-        margin: 8px 0;
-      }
-    </style>
-  </head>
+			.tidbit--description {
+				grid-area: description;
+				margin: 8px 0;
+			}
+		</style>
+	</head>
 
-  <body>
-    <div id="nav-bar">
-      <nav>
-        <a href="/" class="nav--logo" data-is-internal="">SAHTIHYAN</a
-        ><input type="checkbox" id="menu-toggle" /><label
-          for="menu-toggle"
-          class="hamburger-icon"
-        ></label>
-        <ul>
-          <li>
-            <a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a>
-          </li>
-          <li>
-            <a href="/projects" class="nav--link" data-is-internal=""
-              >Projects</a
-            >
-          </li>
-          <li>
-            <a href="/posts" class="nav--link" data-is-internal="">Posts</a>
-          </li>
-          <li>
-            <a href="/about" class="nav--link" data-is-internal="">About</a>
-          </li>
-          <li class="theme-switch-labels">
-            <div class="one-push-switch">
-              <input
-                class="sr-only"
-                type="radio"
-                name="theme-switch"
-                id="theme-auto"
-                value="auto"
-                checked=""
-              /><label for="theme-light" title="Change to light theme"
-                >auto</label
-              ><input
-                class="sr-only"
-                type="radio"
-                name="theme-switch"
-                id="theme-light"
-                value="light"
-              /><label for="theme-dark" title="Change to dark theme"
-                >light</label
-              ><input
-                class="sr-only"
-                type="radio"
-                name="theme-switch"
-                id="theme-dark"
-                value="dark"
-              /><label for="theme-auto" title="Use user-preferenced theme"
-                >dark</label
-              >
-            </div>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <div id="root">
-      <main>
-        <h1>Tidbits</h1>
-        <p>
-          Here lies the small fun things I worked on, and available under this
-          website.
-        </p>
-        <div class="tidbits-container">
-          <a href="/tools/dp-maker"
-            ><div class="tidbit-container">
-              <h2 class="tidbit--title">DP Maker</h2>
-              <img
-                class="tidbit--img"
-                src="/og-images/dp-maker.png"
-                alt="DP Maker project"
-                style="aspect-ratio: 1200 / 630"
-              />
-              <p class="tidbit--description">
-                With this little tool you can create gradient-bordered display
-                pictures (just like mine!). I hope at least a few people find it
-                fun and/or useful.
-              </p>
-            </div></a
-          >
-        </div>
-      </main>
-    </div>
-    <footer>© Sahithyan 2023</footer>
-  </body>
+	<body>
+		<div id="nav-bar">
+			<nav>
+				<a href="/" class="nav--logo" data-is-internal="">SAHTIHYAN</a
+				><input type="checkbox" id="menu-toggle" /><label
+					for="menu-toggle"
+					class="hamburger-icon"
+				></label>
+				<ul>
+					<li>
+						<a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a>
+					</li>
+					<li>
+						<a href="/projects" class="nav--link" data-is-internal=""
+							>Projects</a
+						>
+					</li>
+					<li>
+						<a href="/posts" class="nav--link" data-is-internal="">Posts</a>
+					</li>
+					<li>
+						<a href="/about" class="nav--link" data-is-internal="">About</a>
+					</li>
+					<li class="theme-switch-labels">
+						<div class="one-push-switch">
+							<input
+								class="sr-only"
+								type="radio"
+								name="theme-switch"
+								id="theme-auto"
+								value="auto"
+								checked=""
+							/><label for="theme-light" title="Change to light theme"
+								>auto</label
+							><input
+								class="sr-only"
+								type="radio"
+								name="theme-switch"
+								id="theme-light"
+								value="light"
+							/><label for="theme-dark" title="Change to dark theme"
+								>light</label
+							><input
+								class="sr-only"
+								type="radio"
+								name="theme-switch"
+								id="theme-dark"
+								value="dark"
+							/><label for="theme-auto" title="Use user-preferenced theme"
+								>dark</label
+							>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		</div>
+		<div id="root">
+			<main>
+				<h1>Tidbits</h1>
+				<p>
+					Here lies the small fun things I worked on, and available under this
+					website.
+				</p>
+				<div class="tidbits-container">
+					<a href="/tools/dp-maker"
+						><div class="tidbit-container">
+							<h2 class="tidbit--title">DP Maker</h2>
+							<img
+								class="tidbit--img"
+								src="/og-images/dp-maker.png"
+								alt="DP Maker project"
+								style="aspect-ratio: 1200 / 630"
+							/>
+							<p class="tidbit--description">
+								With this little tool you can create gradient-bordered display
+								pictures (just like mine!). I hope at least a few people find it
+								fun and/or useful.
+							</p>
+						</div></a
+					><a href="/tools/bitwise-operations-playground"
+						><div class="tidbit-container">
+							<h2 class="tidbit--title">Bitwise Operations Playground</h2>
+							<img
+								class="tidbit--img"
+								src="/og-images/bitwise-operations-playground.png"
+								alt="Bitwise Operations Playground project"
+								style="aspect-ratio: 1200 / 630"
+							/>
+							<p class="tidbit--description">
+								If you are someone who is having a hard time with bitwise
+								operations, or someone who have no idea about them, this
+								interactive playground will help you!
+							</p>
+						</div></a
+					>
+				</div>
+			</main>
+		</div>
+		<footer>© Sahithyan 2023</footer>
+
+		<script>
+			function addThemeReminder() {
+				const themeSwitchElements = document.querySelectorAll(
+					"input[name=theme-switch]"
+				);
+				if (themeSwitchElements.length != 0) {
+					themeSwitchElements.forEach((item) => {
+						const selectedTheme = item.id.replace("theme-", "");
+
+						item.addEventListener("input", () => {
+							console.log(selectedTheme);
+							// this is the checked input
+							window.localStorage.setItem("theme", selectedTheme);
+
+							if (!window["__supportCssHas"]) {
+								document.documentElement.setAttribute(
+									"data-theme",
+									selectedTheme
+								);
+							}
+						});
+					});
+				} else {
+					requestAnimationFrame(addThemeReminder);
+				}
+			}
+
+			requestIdleCallback(() => {
+				requestAnimationFrame(addThemeReminder);
+			});
+		</script>
+	</body>
 </html>
