chore: setup redirect to sahithyan.dev

--- a/404.html
+++ b/404.html
@@ -1,1 +1,173 @@
-<!DOCTYPE html><html lang="en"><head><title>NoT F0uND | Sahithyan</title><meta name="description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="alternate" href="https://sahithyandev.github.io/feed.xml" type="application/rss+xml" title="RSS feed"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:site" content="@sahithyandev"><meta property="og:type" content="website"><meta property="og:description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."><meta property="og:title" content="NoT F0uND | Sahithyan"><meta property="og:url" content="sahithyandev.github.io/404"><meta property="og:site_name" content="Sahithyan"><meta property="og:image" content="https://sahithyandev.github.io/og-images/base.png"><meta property="og:image:alt" content="Sahithyan"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' class="google-fonts-link" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap"><noscript><link class="google-fonts-link" rel="stylesheet" type="text/css"></noscript><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-0VVHX1Y9B9"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-0VVHX1Y9B9")</script><link rel="stylesheet" href="/global.css"><script>"serviceWorker"in navigator&&navigator.serviceWorker.register("/service-worker.js").catch((e=>{console.error("Error while initializing service worker",e)})),window.__supportCssHas=!0;try{document.querySelector("*:has(input:checked)")}catch(e){e instanceof DOMException&&(window.__supportCssHas=!1)}const theme=window.localStorage.getItem("theme");if(theme){function setTheme(){const e=document.querySelector(`input#theme-${theme}`);e?(e.checked=!0,window.__supportCssHas||document.documentElement.setAttribute("data-theme",theme)):requestAnimationFrame(setTheme)}requestAnimationFrame(setTheme)}</script><style>body,html{margin:0 auto}#root,body{display:flex;flex-direction:column}body{height:100vh}#root{height:inherit;flex:1;justify-content:center;align-items:center}</style></head><body><div id="nav-bar"><nav><a href="/" class="nav--logo" data-is-internal="">SAHTIHYAN</a><input type="checkbox" id="menu-toggle"><label for="menu-toggle" class="hamburger-icon"></label><ul><li><a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a></li><li><a href="/projects" class="nav--link" data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link" data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link" data-is-internal="">About</a></li><li class="theme-switch-labels"><div class="one-push-switch"><input class="sr-only" type="radio" name="theme-switch" id="theme-auto" value="auto" checked=""><label for="theme-light" title="Change to light theme">auto</label><input class="sr-only" type="radio" name="theme-switch" id="theme-light" value="light"><label for="theme-dark" title="Change to dark theme">light</label><input class="sr-only" type="radio" name="theme-switch" id="theme-dark" value="dark"><label for="theme-auto" title="Use user-preferenced theme">dark</label></div></li></ul></nav></div><div id="root"><div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div></div><footer>© Sahithyan 2023</footer><script>function addThemeReminder(){const e=document.querySelectorAll("input[name=theme-switch]");0!=e.length?e.forEach((e=>{const t=e.id.replace("theme-","");e.addEventListener("input",(()=>{window.localStorage.setItem("theme",t),window.__supportCssHas||document.documentElement.setAttribute("data-theme",t)}))})):requestAnimationFrame(addThemeReminder)}requestIdleCallback((()=>{requestAnimationFrame(addThemeReminder)}))</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>Redirecting...</title>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="https://sahithyan.dev/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="https://sahithyan.dev/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="https://sahithyan.dev/favicon-16x16.png"
+		/>
+		<link
+			rel="shortcut icon"
+			href="https://sahithyan.dev/favicon.ico"
+			type="image/x-icon"
+		/>
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@sahithyandev" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:description"
+			content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
+		/>
+		<meta property="og:title" content="Home | Sahithyan" />
+		<meta property="og:url" content="sahithyan.dev/" />
+		<meta property="og:site_name" content="Sahithyan" />
+		<meta
+			property="og:image"
+			content="https://sahithyandev.github.io/og-images/base.png"
+		/>
+		<meta property="og:image:alt" content="Sahithyan" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<link rel="preconnect" href="https://fonts.googleapis.com/" />
+		<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Color+Emoji&display=swap"
+			rel="stylesheet"
+		/>
+		<noscript>
+			<link class="google-fonts-link" rel="stylesheet" type="text/css" />
+		</noscript>
+		<script>
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			(window.dataLayer = window.dataLayer || []),
+				gtag("js", new Date()),
+				gtag("config", "G-0VVHX1Y9B9");
+		</script>
+		<style>
+			*,
+			::after,
+			::before {
+				box-sizing: border-box;
+			}
+			.stretch-out {
+				--stretch: var(--body-margin-x);
+				margin-right: calc(-1 * var(--stretch));
+				margin-left: calc(-1 * var(--stretch));
+				padding-right: var(--stretch);
+				padding-left: var(--stretch);
+			}
+			:root {
+				font-size: 24px;
+				font-family: "Inter", "Noto Color Emoji", "Twemoji Mozilla",
+					"Apple Color Emoji", "EmojiOne Color", "Android Emoji", sans-serif,
+					system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+					Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
+					sans-serif;
+				color-scheme: dark;
+				--background: hsl(300deg, 3%, 12%);
+				--background-80: hsla(300deg, 3%, 12%, 0.8);
+				--secondary-background: hsla(240, 5%, 18%, 0.6);
+				--font-color: #fffbfe;
+				--font-color-40: hsl(315, 100%, 99%, 0.4);
+				--main: #faf33e;
+				--main-half-opacity: #faf33e70;
+				--secondary: hsl(213deg, 94%, 68%);
+				--secondary-30: hsl(213, 94%, 68%, 0.3);
+				--secondary-dark: #2563eb;
+				--project-card-bg: hsl(240deg 8% 14%);
+			}
+			@media (prefers-color-scheme: light) {
+				:root {
+					color-scheme: light;
+					--background: #fffbfe;
+					--background-80: hsla(315, 100%, 99%, 0.8);
+					--secondary-background: hsla(315, 2%, 78%, 0.7);
+					--font-color: #131315;
+					--font-color-40: hsl(240, 5%, 8%, 0.4);
+					--secondary: hsl(213deg, 94%, 45%);
+					--secondary-30: hsl(213deg, 94%, 68%, 0.3);
+					--project-card-bg: hsl(240deg, 5%, 90%);
+				}
+			}
+			html,
+			body {
+				margin: 0 auto;
+			}
+			body {
+				--body-width: min(48rem, 72vw);
+				--body-margin-x: calc((100vw - var(--body-width)) / 2);
+				width: var(--body-width);
+				color: var(--font-color);
+				background-color: var(--background);
+			}
+			html {
+				padding: 0;
+				max-width: 96vw;
+				overflow-x: hidden;
+				scroll-behavior: smooth;
+			}
+			main {
+				margin-top: 20vh;
+			}
+			h1 {
+				font-size: 1.4rem;
+			}
+			h1 strong {
+				font-size: 3rem;
+			}
+			p {
+				line-height: calc(1em + 0.725rem);
+				max-width: 40ch;
+			}
+			@media (max-width: 850px) {
+				body {
+					--body-width: min(48rem, 92vw);
+				}
+			}
+			@media (max-width: 650px) {
+				:root {
+					font-size: 14px;
+				}
+			}
+		</style>
+	</head>
+	<body>
+		<main>
+			<h1>Redirecting to<br /><strong>sahithyan.dev 🎉 </strong></h1>
+		</main>
+		<script>
+			let targetUrl = new URL(window.location);
+			targetUrl.hostname = "sahithyan.dev";
+			if (targetUrl.port == 3000) {
+				targetUrl.port = 80;
+			}
+			targetUrl = targetUrl.toString();
+			console.log("will redirect to", targetUrl);
+
+			const main = document.querySelector("main");
+			if (main) {
+				const p = document.createElement("p");
+				p.innerHTML = `If you are not redirected automatically, <a href='${targetUrl}''>click here</a>.`;
+
+				main.appendChild(p);
+			}
+		</script>
+	</body>
+</html>
