chore: setup redirect to sahithyan.dev

--- a/404.html
+++ b/404.html
@@ -168,6 +168,9 @@
 
 				main.appendChild(p);
 			}
+			requestAnimationFrame(() => {
+				window.location = targetUrl;
+			});
 		</script>
 	</body>
 </html>
